# forgedmemories

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  README.org  bozohttpd-20240126.tar.bz2  build.sh  generate_tags.sh  notes.txt
Meta/: build.sh  engine.sh
assets/: Sprite-0001.ase
assets/bg/: CREDITS
include/: Algorithm.h  Common.h  EventLoop.h  Game.h  Log.h  Macros.h  Map.h  MapEditor.h  SDLInitManager.h  Types.h
include/oldincludes/: Battle.h  BattleManager.h  CollissionRect.h  ConsoleDebug.h  Enemies.h  FileManagement.h  Loot.h  MapManager.h  NPCManager.h  PlayerManager.h  Point.h  Quests.h  SDL_Font_Setup.h  SDL_Setup.h  SDL_Sound.h  SFXManager.h  Text.h  TextManager.h  stdafx.h
res/data/: Map.txt  npcs.txt  todo.txt
scripts/: bootstrap_deps
src/: Algorithm.cpp  Battle.cpp  Battle.h  BattleManager.cpp  BattleManager.h  ClearScreen.cpp  ClearScreen.h  CollisionRect.cpp  CollissionRect.h  Common.cpp  ConsoleDebug.cpp  ConsoleDebug.h  Enemies.cpp  Enemies.h  Enemy.cpp  Enemy.h  EntityManager.cpp  EntityManager.h  Environment.cpp  Environment.h  EventLoop.cpp  EventManager.cpp  EventManager.h  FileManagement.cpp  FileManagement.h  ForgedMemories.aps  ForgedMemories.filters  ForgedMemories.rc  ForgedMemories.sln  ForgedMemories.vcxproj  ForgedMemories.vcxproj.filters  Game.cpp  GameLoop.cpp  GameLoop.h  GameMenu.cpp  GameMenu.h  Interaction.cpp  Interaction.h  Items.cpp  Items.h  (+37 more)
src/data/: npcs.txt  sprites.txt
src/data/environment/pub/: Map.txt
src/data/psds/: chest.psd
src/res/data/: quests.txt  sprites.txt
src/res/data/environment/: enemy_spritesheet.psd
